[package]
name = "big-brain"
version = "0.11.1-alpha.0"
authors = ["Kat Marchán <kzm@zkat.tech>"]
edition = "2021"
description = "Rusty Utility AI library"
license = "Apache-2.0"
readme = "README.md"
keywords = ["utility-ai", "bevy", "ai", "ecs"]
categories = ["game-development"]
repository = "https://github.com/zkat/big-brain"
homepage = "https://github.com/zkat/big-brain"

[dependencies]
bevy = { git = "https://github.com/bevyengine/bevy", rev = "56667886287e0d0a710b7b354ce140a58ef3b586", default-features = false }

[dev-dependencies]
bevy = { git = "https://github.com/bevyengine/bevy", rev = "56667886287e0d0a710b7b354ce140a58ef3b586", default-features = true }
